skills and qualification

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Skills -->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
             <span class="section__subtitle">My Tecnical level</span>
@@ -138,7 +138,7 @@
             <div class="skills__container container grid">
                 <div>
                     <!-- Skills -->
-                    <div class="skills_content">
+                    <div class="skills__content skills__open">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <!-- Skills 2 -->
-                    <div class="skills_content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
@@ -249,7 +249,7 @@
 
                 <div>
                     <!-- Skills 3 -->
-                    <div class="skills_content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-swatchbook skills__icon"></i>
                             <div>
@@ -295,6 +295,30 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+        <!-- Qualification -->
+        <section class="qualification section">
+            <h2 class="section__title">Qualification</h2>
+            <span class="section__subtitle">My personal journey</span>
+            <div class="qualification__container container">
+                <div class="qualification__tabs">
+                    <div class="qualification__button button--flex">
+                        <i class="uil uil-graduation-cap qualification__icon"></i>
+                        Education
+                    </div>
+                    <div class="qualification__button button--flex">
+                        <i class="uil uil-briefcase-alt qualification__icon"></i>
+                        Work
+                    </div>
+                </div>
+
+                <div class="qualification__sections">
+                    <!-- qualification content -->
+                    <div class="qualification__content">
+                        
+                    </div>
+                </div>
             </div>
         </section>
 
