--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav__item">
                         <a href="#skills" class="nav__link"><i class="uil uil-file-alt nav__icon"></i> Skills</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="#services" class="nav__link"><i class="uil uil-briefcase-alt nav__icon"></i>
                             Services</a>
                     </li>
@@ -37,7 +37,7 @@
                     </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link"><i class="uil uil-message nav__icon"></i> Contactme</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <i class="uil uil-times nav__close" id="nav-close"></i>
             </div>
@@ -55,13 +55,13 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/jvasquezenrique" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="https://www.github.com/" target="_blank" class="home__social-icon">
+                        <a href="https://github.com/jvasquezd" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank" class="home__social-icon">
+                        <a href="https://www.instagram.com/jdvasquezen" target="_blank" class="home__social-icon">
                             <i class="uil uil-instagram-alt"></i>
                         </a>
                     </div>
@@ -80,7 +80,7 @@
                                 165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="12" y="18" xlink:href="./img/perfil.png" />
+                                <image class="home__blob-img" x="12" y="18" xlink:href="./img/3770431.png" />
                             </g>
                         </svg>
                     </div>
@@ -93,9 +93,9 @@
                             itaque rem quos assumenda, alias quasi iure minus doloribus
                             culpa?
                         </p>
-                        <a href="#contact" class="button button--flex">
+                        <!-- <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
             <span class="section__subtitle">My Introduction</span>
 
             <div class="about__container container grid">
-                <img src="" alt="" class="about__img" />
+                <img src="./img/foto_tarjeta.webp" alt="" class="about__img" />
                 <div class="about__data">
                     <p class="about__description">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta
@@ -125,24 +125,24 @@
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">08+</span>
-                            <span class="about__info-name">Years <br />
-                                experience</span>
+                            <span class="about__info-title">06+</span>
+                            <span class="about__info-name">Meses <br />
+                                Experiencia</span>
                         </div>
                         <div>
-                            <span class="about__info-title">20+</span>
-                            <span class="about__info-name">Completed <br />
-                                project</span>
+                            <span class="about__info-title">2+</span>
+                            <span class="about__info-name">Proyectos <br />
+                                Completados</span>
                         </div>
                         <div>
-                            <span class="about__info-title">05+</span>
-                            <span class="about__info-name">Companies <br />
-                                worked</span>
+                            <span class="about__info-title">02+</span>
+                            <span class="about__info-name">Empresas <br />
+                                </span>
                         </div>
                     </div>
 
                     <div class="about__buttons">
-                        <a download="./pdf/cv.pdf" class="button button--flex">
+                        <a href="./pdf/cv.pdf" download class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -163,7 +163,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
                                 <h1 class="skills__titles">Frontend developer</h1>
-                                <span class="skills__subtitle">More Than 4 years</span>
+                                <span class="skills__subtitle">Más de 6 meses de Experiencia</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -182,7 +182,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -192,7 +192,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Javascript</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">60%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -202,7 +202,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">React</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span% class="skills__number">45%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -217,7 +217,7 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__titles">Backend developer</h1>
-                                <span class="skills__subtitle">More Than 2 years</span>
+                                <span class="skills__subtitle">Más de 9 meses de experiencia</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -265,6 +265,7 @@
                             </div>
                         </div>
                     </div>
+                
                 </div>
 
                 <div>
@@ -273,7 +274,7 @@
                         <div class="skills__header">
                             <i class="uil uil-swatchbook skills__icon"></i>
                             <div>
-                                <h1 class="skills__titles">Designer</h1>
+                                <h1 class="skills__titles">Mobile Developer</h1>
                                 <span class="skills__subtitle">More Than 5 years</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -282,8 +283,8 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Figma</h3>
-                                    <span class="skills__number">90%</span>
+                                    <h3 class="skills__name">Android Studio</h3>
+                                    <span class="skills__number">80%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -292,8 +293,8 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Sketch</h3>
-                                    <span class="skills__number">65%</span>
+                                    <h3 class="skills__name">XML</h3>
+                                    <span class="skills__number">45%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -318,7 +319,7 @@
         </section>
 
         <!-- Qualification -->
-        <section class="qualification section">
+        <!-- <section class="qualification section">
             <h2 class="section__title">Qualification</h2>
             <span class="section__subtitle">My personal journey</span>
 
@@ -337,9 +338,7 @@
 
                 <div class="qualification__sections">
                     
-                    <!-- qualification content -->
                     <div class="qualification__content qualification__active" data-content id="education">
-                        <!-- qualification 1 -->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Enginner</h3>
@@ -356,7 +355,6 @@
                             </div>
                         </div>
 
-                        <!-- qualification 2 -->
                         <div class="qualification__data">
                             <div></div>
                             <div>
@@ -373,7 +371,6 @@
                             </div>
                         </div>
 
-                        <!-- qualification 3 -->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Web Development</h3>
@@ -390,7 +387,6 @@
                             </div>
                         </div>
 
-                        <!-- qualification 4 -->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Enginner</h3>
@@ -408,9 +404,7 @@
                         </div>
                     </div>
 
-                    <!-- qualification content -->
                     <div class="qualification__content" data-content id="work">
-                        <!-- qualification 1 -->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Software Enginner</h3>
@@ -427,7 +421,6 @@
                             </div>
                         </div>
 
-                        <!-- qualification 2 -->
                         <div class="qualification__data">
                             <div></div>
                             <div>
@@ -444,7 +437,6 @@
                             </div>
                         </div>
 
-                        <!-- qualification 3 -->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Web Development</h3>
@@ -457,7 +449,6 @@
 
                             <div>
                                 <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
                             </div>
                         </div>
 
@@ -466,8 +457,9 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
 
+<!-- 
         <section class="services section" id="services">
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What i offer</span>
@@ -495,7 +487,7 @@
 
             </div>
 
-        </section>
+        </section> -->
     </main>
 
     <!-- Javascripts -->
