editando skills mobile developer

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">50%</span>
+                                    <span class="skills__number">60%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -226,7 +226,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Java</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">60%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -246,7 +246,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Oracle</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -256,7 +256,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Mysql</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
 
                                 <div class="skills__bar">
@@ -275,7 +275,7 @@
                             <i class="uil uil-swatchbook skills__icon"></i>
                             <div>
                                 <h1 class="skills__titles">Mobile Developer</h1>
-                                <span class="skills__subtitle">More Than 5 years</span>
+                                <span class="skills__subtitle">Más de 6 meses de experiencia</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -284,11 +284,11 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Android Studio</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__figma"></span>
+                                    <span class="skills__percentage skills__ads"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
@@ -298,17 +298,17 @@
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__sketch"></span>
+                                    <span class="skills__percentage skills__xml"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Photoshop</h3>
-                                    <span class="skills__number">90%</span>
+                                    <h3 class="skills__name">MVP</h3>
+                                    <span class="skills__number">40%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__photoshop"></span>
+                                    <span class="skills__percentage skills__mvp"></span>
                                 </div>
                             </div>
                         </div>
