--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
                         <h1 class="home__title">Hi, I'm Jhonatan</h1>
                         <h3 class="home__subtitle">Fullstack Developer</h3>
                         <p class="home__description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est in
-                            itaque rem quos assumenda, alias quasi iure minus doloribus
-                            culpa?
+                            Soy egresado de la carrera de Ingeniería de Software de la
+                            Universidad Nacional Mayor de San Marcos. Busco expandir mis conocimientos en el desarrollo fullstack.
                         </p>
                         <!-- <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
@@ -118,10 +117,11 @@
                 <img src="./img/foto_tarjeta.webp" alt="" class="about__img" />
                 <div class="about__data">
                     <p class="about__description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta
-                        blanditiis temporibus eum sint ullam laborum similique officiis,
-                        maiores recusandae esse quod sequi accusamus. Possimus, distinctio
-                        voluptatum officia iste quod vitae!
+                        Durante mi experiencia laboral, he participado en proyectos de desarrollo de software 
+                        en los que he aplicado mis habilidades y conocimientos en el diseño, desarrollo y mantenimiento
+                        de aplicaciones para dispositivos móviles y aplicaciones web. También he tenido la oportunidad
+                        de trabajar en equipo y de aplicar metodologías ágiles de desarrollo de software para cumplir
+                        con los objetivos del proyecto.
                     </p>
                     <div class="about__info">
                         <div>
@@ -137,7 +137,7 @@
                         <div>
                             <span class="about__info-title">02+</span>
                             <span class="about__info-name">Empresas <br />
-                                </span>
+                            </span>
                         </div>
                     </div>
 
@@ -265,7 +265,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                 </div>
 
                 <div>
@@ -459,7 +459,7 @@
             </div>
         </section> -->
 
-<!-- 
+        <!-- 
         <section class="services section" id="services">
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What i offer</span>
