--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <span class="section__subtitle">My Introduction</span>
 
             <div class="about__container container grid">
-                <img src="./img/foto_tarjeta.webp" alt="" class="about__img" />
+                <img src="./img/1995515.png" alt="" class="about__img" />
                 <div class="about__data">
                     <p class="about__description">
                         Durante mi experiencia laboral, he participado en proyectos de desarrollo de software 
@@ -125,7 +125,7 @@
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">06+</span>
+                            <span class="about__info-title">08+</span>
                             <span class="about__info-name">Meses <br />
                                 Experiencia</span>
                         </div>
@@ -135,7 +135,7 @@
                                 Completados</span>
                         </div>
                         <div>
-                            <span class="about__info-title">02+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about__info-name">Empresas <br />
                             </span>
                         </div>
